--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Cast CAF Receiver</title>
-    <!-- TODO: Add Cast! -->
-
+    <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+    <!-- Cast Debug Logger -->
+    <script src="//www.gstatic.com/cast/sdk/libs/devtools/debug_layer/caf_receiver_logger.js"></script>
   </head>
 
   <body>
+    <cast-media-player></cast-media-player>
     <footer>
       <script src="js/receiver.js"></script>
-    </footer>
+  </footer>
   </body>
 </html>
