--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               NDA: Si vous n'avez qu'un seul channel, la pratique courante est d'utiliser l’applicationId comme nom.
               C'est ce que je fais ici
           */
-          var CHANNEL = 'urn:x-cast:com.github.quentin7b.estimateit';
+          var CHANNEL = 'urn:x-cast:com.lyrics.tamilchristians';
 
           /*
              Ici, on va définir les namespaces, notamment notre channel de communication qui sera en JSON
