--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           */
           ctx.addCustomMessageListener(CHANNEL, function(customEvent) {
             //var message = customEvent.data
-            var message = "Thank You Jesus"
+            var message = "Thank You Jesus, Lord is My Shepard i shall not wand"
             console.log("Message received from " + 
                         "[" +  customEvent.senderId +  "] " +
                         ": " + message);
