--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               Le but ici, afficher le contenu du message dans la <div id="content"><div> plus haut
           */
           ctx.addCustomMessageListener(CHANNEL, function(customEvent) {
-            var message = customEvent.data;
+            var message = customEvent.data
             //var message = "Thank You Jesus, Lord is My Shepard i shall not wand";
             console.log("Message received from " + 
                         "[" +  customEvent.senderId +  "] " +
