--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         C'est dans ce div qu'on va faire apparaître notre contenu ! 🧙
     -->
     <div id="container">
-      <span id="content">Please Wait..!</span>
+      <span id="content">Please Wait</span>
     </div>
 
     <!-- 
