--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       font-family: 'Roboto', sans-serif;      
       font-size: 40px;
       color: #FF7A59;
+      margin-right: 20px;
+      margin-left: 20px;
     }
     </style>
   </head>
