--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       color: #FF7A59;
       margin-right: 20px;
       margin-left: 20px;
+      font-weight: bold;
     }
     </style>
   </head>
