--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Estimate It</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Anek Tamil' rel='stylesheet' type='text/css'>
 
     <style>
     body {
@@ -28,7 +28,7 @@
     }
 
     #content {
-      font-family: 'Roboto', sans-serif;      
+      font-family: 'Anek Tamil', sans-serif;      
       font-size: 40px;
       color: #FF7A59;
       margin-right: 20px;
@@ -43,7 +43,7 @@
         C'est dans ce div qu'on va faire apparaître notre contenu ! 🧙
     -->
     <div id="container" class="bg">
-      <span id="content">Please Wait</span>
+      <span id="content">அமர்ந்திருங்கள்...!t</span>
     </div>
 
     <!-- 
