--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         C'est dans ce div qu'on va faire apparaître notre contenu ! 🧙
     -->
     <div id="container" class="bg">
-      <span id="content">அமர்ந்திருங்கள்...!t</span>
+      <span id="content">அமர்ந்திருங்கள்...!</span>
     </div>
 
     <!-- 
